refactor: URL -> URI